# pkg/handlers/user_handler.go
@@ -1,23 +1,152 @@
 package handlers
 
-import "net/http"
+import (
+	"encoding/json"
+	"net/http"
+	"strconv"
 
+	"github.com/aliasthewho/online-store/internal/app"
+	"github.com/aliasthewho/online-store/pkg/models"
+	"github.com/aliasthewho/online-store/pkg/users"
+	"github.com/gorilla/mux"
+)
+
+// @Summary Get all the users
+// @Description Get all users
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} users.User
+// @Failure 400 {object} models.ErrorResponse
+// @Router /users [get]
 func GetUsers(w http.ResponseWriter, r *http.Request) {
+	userService := app.NewUserService()
+	users := userService.ListUsers()
 
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(users)
 }
 
+// @Summary Get a user by ID
+// @Description Get user by ID
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200 {object} users.User
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 404 {object} models.ErrorResponse
+// @Router /users/{id} [get]
 func GetUserByID(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		http.Error(w, "Invalid user ID", http.StatusBadRequest)
+		return
+	}
 
+	userService := app.NewUserService()
+	user := userService.GetUserByID(id)
+
+	if user == nil {
+		// http.Error(w, "User not found", http.StatusNotFound)
+		errorReponse := models.NewErrorResponse(http.StatusNotFound, "User not found", "User not found with ID "+vars["id"])
+		json.NewEncoder(w).Encode(errorReponse)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(user)
 }
 
+// @Summary Get a user by ID
+// @Description Get user by ID
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200 {object} users.User
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 404 {object} models.ErrorResponse
+// @Router /users/{id} [get]
 func CreateUser(w http.ResponseWriter, r *http.Request) {
+	var user users.User
+	err := json.NewDecoder(r.Body).Decode(&user)
 
+	if err != nil {
+		http.Error(w, "Invalid user data", http.StatusBadRequest)
+		return
+	}
+
+	userService := app.NewUserService()
+	userService.CreateUser(user)
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusCreated)
 }
 
+// @Summary Create a new user
+// @Description Create a new user
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param user body users.User true "User data"
+// @Success 201
+// @Failure 400 {object} models.ErrorResponse
+// @Router /users [post]
 func UpdateUser(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		http.Error(w, "Invalid user ID", http.StatusBadRequest)
+		return
+	}
+
+	var updateUser users.User
+	err = json.NewDecoder(r.Body).Decode(&updateUser)
+	if err != nil {
+		http.Error(w, "Invalid user data", http.StatusBadRequest)
+		return
+	}
+
+	userService := app.NewUserService()
+	err = userService.UpdateUser(id, updateUser)
+	if err != nil {
+		http.Error(w, "User not found", http.StatusNotFound)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusNoContent)
 
 }
 
+// @Summary Update a user
+// @Description Update user by ID
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Param user body users.User true "User data"
+// @Success 204
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 404 {object} models.ErrorResponse
+// @Router /users/{id} [put]
 func DeleteUser(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		http.Error(w, "Invalid user ID", http.StatusBadRequest)
+		return
+	}
 
+	userService := app.NewUserService()
+	err = userService.DeleteUser(id)
+	if err != nil {
+		http.Error(w, "User not found", http.StatusNotFound)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusNoContent)
 }
